--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>3.1.3</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
