--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+resources/
+
 
 ### STS ###
 .apt_generated
@@ -18,6 +20,8 @@ target/
 *.iws
 *.iml
 *.ipr
+/src/main/resources/
+
 
 ### NetBeans ###
 /nbproject/private/
@@ -31,4 +35,5 @@ build/
 
 ### VS Code ###
 .vscode/
-/src/main/resources/
+
+
