--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/doctor_appointment_system
 spring.datasource.username=root
 spring.datasource.password=zhjckfd
 spring.jpa.hibernate.ddl-auto=none
+
 access.key=yGeTgvGkCJH73K3lhrQqdIqfPJMeLkZRK1mTfGb2eCI=
 refresh.key=bz9RThlOdV9gYVyEfKJW9cfWagrgSobUWBWDQsqJp4k=
+
+accessExpirationMs= 3600000
+refreshExpirationMs= 86400000
